--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"fetch-cookie": "^2.2.0",
 		"lodash": "^4.17.21",
+		"node-fetch": "^3.3.2",
 		"toml": "^3.0.0"
 	}
 }
