--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
 	"type": "module",
 	"dependencies": {
 		"event": "^1.0.0",
+		"execSync": "^1.0.2",
 		"fetch-cookie": "^2.2.0",
+		"fs-extra": "^11.2.0",
 		"lodash": "^4.17.21",
 		"node-fetch": "^3.3.2",
 		"toml": "^3.0.0"
