--- a/package.json
+++ b/package.json
@@ -10,28 +10,36 @@
 		"format": "prettier --write ."
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "^2.0.0",
-		"@sveltejs/kit": "^1.27.4",
+		"@sveltejs/adapter-auto": "^3.1.1",
+		"@sveltejs/kit": "^2.5.0",
+		"@sveltejs/vite-plugin-svelte": "^3.0.2",
 		"@tailwindcss/typography": "^0.5.10",
 		"autoprefixer": "^10.4.16",
 		"daisyui": "^4.4.17",
 		"postcss": "^8.4.32",
 		"prettier": "^3.0.0",
 		"prettier-plugin-svelte": "^3.0.0",
+		"rollup-plugin-node-builtins": "^2.1.2",
 		"svelte": "^4.2.7",
+		"svelte-preprocess": "^5.1.3",
 		"tailwindcss": "^3.3.5",
-		"vite": "^4.4.2"
+		"vite": "^5.1.3"
 	},
 	"type": "module",
 	"dependencies": {
+		"child_process": "^1.0.2",
+		"download.js": "^1.0.0",
 		"downloadjs": "^1.4.7",
 		"event": "^1.0.0",
 		"execSync": "^1.0.2",
 		"fetch-cookie": "^2.2.0",
 		"file-saver": "^2.0.5",
+		"fs": "^0.0.1-security",
 		"fs-extra": "^11.2.0",
 		"lodash": "^4.17.21",
 		"node-fetch": "^3.3.2",
-		"toml": "^3.0.0"
+		"path": "^0.12.7",
+		"toml": "^3.0.0",
+		"url": "^0.11.3"
 	}
 }
