--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
 		"format": "prettier --write ."
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "^3.1.1",
+		"@sveltejs/adapter-node": "^4.0.1",
 		"@sveltejs/kit": "^2.5.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.2",
 		"@tailwindcss/typography": "^0.5.10",
+		"@types/downloadjs": "^1.4.6",
 		"autoprefixer": "^10.4.16",
 		"daisyui": "^4.4.17",
 		"postcss": "^8.4.32",
