--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 		"lodash": "^4.17.21",
 		"node-fetch": "^3.3.2",
 		"path": "^0.12.7",
+		"rimraf": "^5.0.7",
 		"toml": "^3.0.0",
 		"url": "^0.11.3"
 	}
